--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
 		    <artifactId>ojdbc8</artifactId>
 		    <version>19.8.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.ws.rs</groupId>
+			<artifactId>javax.ws.rs-api</artifactId>
+			<version>2.1</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 </project>
